GUI Changes, added images, menu

--- a/public/partials/default.html
+++ b/public/partials/default.html
@@ -1,9 +1,19 @@
-<div class="row">
-  <div class="span12">
-    <form method="get" action="#/" class="form-inline" >
-      <input name="q" class="span5" type="text"  placeholder="Keywords: Ruby, Rails, Django" >
-      <input name="loc" class="span5" type="text"  placeholder="Location: City, State, Zip">
-      <button type="submit" class="btn btn-primary"> <i class="icon-search icon-white"></i></button>
-    </form>
-  </div>
+<div id="home-intro">
+    <p>
+    This is Version 0.1 of the GeoKnow Generator, which comprises a number of tools for managing the life-cycle of Geographic Linked Data. The life-cycle comprises in particular the stages:
+	</p>
+	<ul>
+	<li>Extraction of RDF from text, XML and SQL</li>
+	<li>Querying and Exploration using SPARQL</li>
+	<li>Authoring of Linked Data using a Semantic Wiki</li>
+	<li>Semi-automatic link discovery between Linked Data sources</li>
+	<li>Knowledge-base Enrichment and Repair</li>
+	<li>You can access tools for each of these stages using the menu on the left.</li>
+	</ul>
+	<p>
+	The GeoKnow Generator is developed by the GeoKnow project consortium comprising 6 research groups and companies. The GeoKnow project is co-funded by the European Commission within the 7th Framework Programme (GA no. 318159).
+	</p>
+	<p>
+	You can find further information about the GeoKnow project at <a href="http://geoknow.eu" target="blank">http://geoknow.eu</a>.
+	</p>
 </div>
