--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,9 +1,161 @@
 /* app css stylesheet */
 
+/* Masthead - Logos */
+
+#masthead{
+	width:100%;
+	height:100px;
+}
+
 .geoknowbrand{
   float: left;
-  display: block;
-  margin-right: 20px;
-  margin-left: -10px;
-  padding-top: 5px;
+  margin: 5px 20px 2px 10px;
+}
+
+.eufp7{
+  float: right;
+  margin: 5px 20px 2px 10px;
+}
+
+/* Navbar and elements */
+
+.navbar{
+	float:left;
+	width:100%;
+	height:20px;
+	background:#CCCCCC;
+	margin:0;
+}
+
+.navbar .nav{
+	margin-left:10px;
+	font-size:.9em;
+}
+
+.navbar .nav > li > a {
+	background:#CCCCCC;
+	color:#000000;
+	text-shadow:none;
+	line-height: 20px;
+}
+
+.navbar .nav > li > a:hover{
+	background:#CCCCCC;
+	text-shadow:none;
+	color:#EF7D00;
+}
+
+.navbar .nav > li > a {
+    padding: 0 10px 0 10px;
+    color:#000000;
+}
+
+/* Lower navbar and elements */
+
+.lower-navbar{
+	float:left;
+	height:30px;
+	width:100%;
+}
+
+.lower-navbar{
+	margin:4px 0 0 0;
+}
+
+.navbar-form .input-append{
+	margin:0 22px 0 0;
+}
+
+
+.span2.search-query{
+	width:210px;
+}
+
+.navbar-form .input-append .span2.search-query {
+	padding:2px;
+	font-size:1em;
+}
+
+.navbar-form .input-append .btn {
+	padding:2px;
+}
+
+/* Sidebar Menu */
+
+.span3.bs-docs-sidebar{
+	position:absolute;
+	top: 152px;
+	margin-left:0;
+	border-top:1px solid #000000;
+}
+
+
+.nav-list{
+	padding-left: 0;
+	padding-right: 0;
+}
+
+.nav-list li a{
+	margin-left: 0;
+	margin-right: 0;
+	font-weight:bold;
+	color:#BC1B8B;
+	text-shadow:none;
+}
+
+.nav-list li a:hover{
+	background:none;
+}
+
+.bs-docs-sidebar .nav-list li{
+	border-bottom:1px solid #000000;
+}
+
+.nav.nav-list.submenu-li li a{
+	margin-left:5px;
+}
+
+.nav.nav-list.submenu a{
+	font-weight:normal;
+	margin-left:5px;
+}
+
+.nav.nav-list.submenu a:hover{
+	background: none;
+}
+
+
+/* Workspace & elements - Map */
+
+#workspace{
+	position:absolute;
+	top:152px;
+	left:270px;
+	right:0;
+	bottom:0;
+	border-top:1px solid #000000;
+	border-left:1px solid #000000;
+}
+
+.form-inline{
+	margin:15px 0 0 15px;
+}
+
+/* Homepage */
+
+#home-intro{
+	width:600px;
+	margin:5px 10px 5px 10px;
+}
+
+/* Geospatial page */
+
+#map{
+	width:100%;
+	height:100%;
+}
+
+#ow-frame{
+	width:100%;
+	height:100%;
 }
