add first draft for settings

--- a/src/main/webapp/partials/default.html
+++ b/src/main/webapp/partials/default.html
@@ -4,7 +4,7 @@
   <div class="row-fluid">
   	<div class="span3"> 
 	    
-			<div ng-controller="StackCtrl">
+			<div ng-controller="StackMenuCtrl">
 			  <accordion>
 			    <accordion-group heading="{{group.title}}" ng-repeat="group in groups">
 			    	<ul>
