--- a/src/main/webapp/partials/settings/data-sources.html
+++ b/src/main/webapp/partials/settings/data-sources.html
@@ -3,7 +3,33 @@
 
 <h3>Add a Source</h3>
 
+
+
 <h3>External Data Sources</h3>
+
+<table class="table table-striped">
+<thead>
+  <tr>
+    <th>url</th>
+    <th>Description</th>
+    <th>Type</th>
+    <th>Action</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td>http://publicdata.eu/</td>
+    <td>publicdata.eu</td>
+    <td>http://localhost/geoknow-generator-config</td>
+    <td>
+    	<ul>
+    		<i class="icon-trash icon-large"></i>
+    		<i class="icon-edit icon-large"></i>
+    	</ul>
+    </td>
+  </tr>
+</tbody>
+</table>
 
 
 <h3>Internal Data Sources</h3>
