--- a/src/main/webapp/partials/default.html
+++ b/src/main/webapp/partials/default.html
@@ -10,7 +10,7 @@
 			    </accordion-group>
 			  </accordion>
 			</div>
-			<button ng-click="menuClose = !menuClose">Hide</button>
+			<ul><li ng-click="menuClose = !menuClose">Hide Menu</li></ul>
 			</div>
 
 <div class="container">
@@ -31,6 +31,7 @@
 		</div>
 -->
 	  
+	  	<div app-view-segment="1">
  		 <p>
 	    This is Version 0.1 of the GeoKnow Generator, which comprises a number of tools for managing the life-cycle of Geographic Linked Data. The life-cycle comprises in particular the stages:
 			</p>
@@ -48,7 +49,7 @@
 			<p>
 			You can find further information about the GeoKnow project at <a href="http://geoknow.eu" target="blank">http://geoknow.eu</a>.
 			</p>
-	   
+	   </div>
 		
   </div>
 
