--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -2,26 +2,7 @@
 
 html, body{
 	height:100%;
-}
-
-#contents { 
-    height: 100%;
-}
-
-#contents {
-    height: 100%;
-}
-
-div[class*='fluid']{
-	height:100%;
-}
-
-div[class*='span']{
-	height:100%;
-}
-
-div[class*='ng-scope']{
-	height:100%;
+	font: 13px Helvetica, arial, freesans, clean, sans-serif;
 }
 
 /* Masthead - Logos */
@@ -48,107 +29,43 @@ div[class*='ng-scope']{
 /* Navbar and elements */
 
 .navbar{
-/*	float:left;
-	width:100%;
-	height:20px;*/
-	background:#CCCCCC;
-	margin-bottom: 0px;
-	/*margin:0;*/
+	background-image: linear-gradient(#f9f9f9, #DDDADA);
+	background-repeat: repeat-x;
+	font-weight:bold;
 }
 
-.navbar .nav{
-	/*margin-left:10px;*/
-	font-size:.9em;
-}
 
 .navbar .nav > li > a {
-	background:#CCCCCC;
 	color:#000000;
 	text-shadow:none;
 	line-height: 20px;
 }
 
 .navbar .nav > li > a:hover{
-	background:#CCCCCC;
+	background-image: linear-gradient(#f9f9f9, #CCCCCC);
+	background-repeat: repeat-x;
 	text-shadow:none;
 	color:#EF7D00;
 }
 
 .navbar .nav > li > a {
-    /*padding: 0 10px 0 10px;*/
     color:#000000;
 }
 
-/* Lower navbar and elements */
-/*
-.lower-navbar{
-	float:left;
-	height:30px;
-	width:100%;
+.navbar-brand {
+    height:50px;
+    padding: 2px 10px 0 15px;
 }
 
-.lower-navbar{
-	margin:4px 0 0 0;
+.active{
+	background-image: linear-gradient(#f9f9f9, #CCCCCC);
+	background-repeat: repeat-x;
 }
-
-.navbar-form .input-append{
-	margin:0 22px 0 0;
-}
-
-
-.span2.search-query{
-	width:210px;
-}
-
-.navbar-form .input-append .span2.search-query {
-	padding:2px;
-	font-size:1em;
-}
-
-.navbar-form .input-append .btn {
-	padding:2px;
-}*/
 
 /* Sidebar Menu */
 
-.span3.bs-docs-sidebar{
-	/*margin-left:0;*/
-	border-top:1px solid #000000;
-}
-
-
-.nav-list{
-	padding-left: 0;
-	padding-right: 0;
-}
-
-.nav-list li a{
-	margin-left: 0;
-	margin-right: 0;
-	font-weight:bold;
-	color:#BC1B8B;
-	text-shadow:none;
-}
-
-.nav-list li a:hover{
-	background:none;
-}
-
-.bs-docs-sidebar .nav-list li{
-	border-bottom:1px solid #000000;
-}
-
-.nav.nav-list.submenu-li li a{
-	margin-left:5px;
-}
-
-.nav.nav-list.submenu a{
-	font-weight:normal;
-	margin-left:5px;
-}
-
-.nav.nav-list.submenu a:hover{
-	/*background: none;*/
+.list-group-item{
+	border:none;
 }
 
 /* Workspace & elements - Map */
@@ -182,7 +99,7 @@ div[class*='ng-scope']{
 }
 
 /* OntoWiki */
-
+/*
 #ow-frame{
 	  position: absolute;
 	  top: 0;
@@ -205,3 +122,4 @@ div[class*='ng-scope']{
     overflow-y: auto;
     padding: 15px;
 }
+*/
