--- a/src/main/webapp/partials/default.html
+++ b/src/main/webapp/partials/default.html
@@ -1,23 +1,27 @@
-
-
-<div class="container-fluid">
-  <div class="row-fluid">
-  	<div class="span3"> 
-	    
-			<div ng-controller="StackMenuCtrl">
-			  <accordion>
-			    <accordion-group heading="{{group.title}}" ng-repeat="group in groups">
-			    	<ul>
-			      	<li ng-repeat="item in group.items">
-								<a href="{{item.route}}">{{item.name}}</a>
-			      	</li>
-						</ul>
-			    </accordion-group>
-			  </accordion>
+<div class="container">
+  <div class="row">
+  	<div class="col-md-3">
+			
+			<div class="panel-group" id="accordion" ng-controller="StackMenuCtrl">
+			  <div class="panel panel-default" ng-repeat="group in groups">
+				  <div class="panel-heading">
+					  <h5 class="panel-title">
+				        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#{{group.id}}">
+				          {{group.title}}
+				        </a>
+				      </h5>
+				  </div>
+				  <div id={{group.id}} class="panel-collapse collapse" ng-controller="SidebarCtrl">
+					  <div ng-class="{selected:isSelected('{{item.url}}')}" ng-repeat="item in group.items">
+							<a class="list-group-item" href="{{item.route}}">{{item.name}}</a>
+					  </div>
+				  </div>
+			  	</div>
 			</div>
+			
 		</div>
 
-	  <div class="span9">
+	  <div class="col-md-7">
 	  	<div app-view-segment="1">
  		 <p>
 	    This is Version 0.1 of the GeoKnow Generator, which comprises a number of tools for managing the life-cycle of Geographic Linked Data. The life-cycle comprises in particular the stages:
