--- a/src/main/webapp/partials/linking/limes.html
+++ b/src/main/webapp/partials/linking/limes.html
@@ -1,6 +1,7 @@
+<!-- 
 <div ng-controller="ModalWindow">
-    <button class="btn" ng-click="open()">Open me!</button>
-    <div modal="shouldBeOpen" close="close()" options="opts">
+    <a data-toggle="modal" href="#modalWindow" class="btn btn-primary btn-large" ng-click="open()">Launch demo modal</a>
+    <div id="modalWindow" class="modal">
         <div class="modal-header">
             <h4>LIMES</h4>
         </div>
@@ -12,3 +13,28 @@
         </div>
     </div>
 </div>
+
+ -->
+
+<div ng-controller="ModalWindow">
+	<h3 class="green bold">LIMES - SAIM</h3>
+    <a class="btn btn-primary btn-large" ng-click="open()">Launch LIMES</a>
+
+  <!-- Modal -->
+  <div class="modal fade" id="modalWindow">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h5 class="modal-title green bold">LIMES - SAIM</h5>
+        </div>
+        <div class="modal-body">
+        <iframe id="mod-frame" src="http://139.18.2.136:8080/SAIM"></iframe>
+        </div>
+        <div class="modal-footer">
+          <button class="btn-sm btn-success" class="close" data-dismiss="modal">Close</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+  </div>
