--- a/src/main/webapp/partials/querying-and-exploration/geospatial.html
+++ b/src/main/webapp/partials/querying-and-exploration/geospatial.html
@@ -1,3 +1,4 @@
-<div ng-controller="OpenMapWindow">
+<div id="mainwindow" ng-controller="OpenMapWindow">
         	<div id="map"></div>
 		</div>
+		
