--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -5,25 +5,15 @@ html, body{
 	font: 13px Helvetica, arial, freesans, clean, sans-serif;
 }
 
-/* Masthead - Logos */
-
-#masthead{
-	width:100%;
-	height:100px;
+#contents{
+	width:96%;
+	max-width:1920px;
+	margin-left:auto;
+	margin-right:auto;
 }
 
-.geoknowbrand{
-  float: left;
-  margin: 5px 20px 2px 10px;
-}
-
-.eufp7{
-  float: right;
-  margin: 5px 20px 2px 10px;
-}
-
-.container-fluid {
-    padding: 0px;
+.contents{
+	height:96%;
 }
 
 /* Navbar and elements */
@@ -32,8 +22,23 @@ html, body{
 	background-image: linear-gradient(#f9f9f9, #DDDADA);
 	background-repeat: repeat-x;
 	font-weight:bold;
+	letter-spacing:0.08em;
 }
 
+a.navbar-brand{
+	width:60px;
+	height:50px;
+	background:transparent url('../img/gkg-logo.png') center center no-repeat;
+}
+
+a.navbar-brand:hover{
+	background:transparent url('../img/gkg-logo-purple.png') center center no-repeat;
+	
+}
+
+.navbar .navbar-nav > .active > a {
+    background: none;
+}
 
 .navbar .nav > li > a {
 	color:#000000;
@@ -57,9 +62,8 @@ html, body{
     padding: 2px 10px 0 15px;
 }
 
-.active{
-	background-image: linear-gradient(#f9f9f9, #CCCCCC);
-	background-repeat: repeat-x;
+.navbar .nav > li.active a{
+	color: #EF7D00;
 }
 
 /* Sidebar Menu */
@@ -68,43 +72,98 @@ html, body{
 	border:none;
 }
 
-/* Workspace & elements - Map */
-/*
-#workspace{
-	position:absolute;
-	top:152px;
-	left:270px;
-	right:0;
-	bottom:0;
-	border-top:1px solid #000000;
-	border-left:1px solid #000000;
+.list-item a{
+	border:1px solid #FFFFFF;
+	background: none;
 }
 
-.form-inline{
-	margin:15px 0 0 15px;
+.list-item h6{
+	margin-top:3px;
+	margin-bottom:3px;
 }
-*/
-/* Homepage */
 
-/*#home-intro{
-	width:600px;
-	margin:5px 10px 5px 10px;
+.list-item.selected{
+	background-color: #f5f5f5;
+	border-top-right-radius: 4px;
+	border-top-left-radius: 4px;
+	border-bottom-right-radius: 4px;
+	border-bottom-left-radius: 4px;
 }
-*/
-/* Geospatial page */
+
+.list-item.selected a{
+	color: #BC1B8B;
+	border:1px solid #84BB41;
+}
+
+.list-item.selected h6{
+	margin-top:3px;
+	margin-bottom:3px;
+}
+
+a.list-group-item:hover{
+	background-color: #f5f5f5;
+	border:1px solid #84BB41;
+	color: #BC1B8B;
+}
+	
+.accordion-toggle:hover{
+	cursor:pointer;
+	color:#BC1B8B;
+}
+	
+/* Typography */
+
+.green.bold{
+	color:#84BB41;
+	font-weight:bold;
+	margin-top: 0;
+}
+
+.green .bold{
+	color:#84BB41;
+	font-weight:bold;
+}
+	
+/* Map pages */
 
 #map{
 	width:100%;
 	height:100%;
 }
 
-/* OntoWiki */
-/*
-#ow-frame{
+/* General rules */
+
+#mainwindow{
+	height:100%;
+	width:100%;
+}
+
+#main-frame{
+	  height: 100%;
+	  width: 100%;
+}
+
+/* Modal iframe */
+
+#mod-frame{
 	  position: absolute;
 	  top: 0;
 	  height: 100%;
-	  width: 100%;
+	  width: 97%;
+}
+
+
+/* Modal Window */
+/*
+.modal.in .modal-dialog {
+    height: 100%;
+    width: 100%;
+}
+
+.modal-content {
+    height: 100%;
+    width: 100%;
+    overflow-y: auto;
 }
 
 .modal.fade.in {
@@ -122,4 +181,10 @@ html, body{
     overflow-y: auto;
     padding: 15px;
 }
-*/
+
+.modal-footer {
+	padding: 15px 10px 15px 10px;
+	margin-top: 5px;
+	text-align: right;
+	border-top: 1px solid #e5e5e5;
+} */
