--- a/src/main/webapp/partials/account.html
+++ b/src/main/webapp/partials/account.html
@@ -1,5 +1,21 @@
 
-<div class="container">
+<div class="container" app-view-segment="1">
+<div class="row">
+  	<div class="col-lg-3">
+			
+			<div class="panel-group">
+			  <div class="panel panel-default">
+				  <div class="panel-heading">
+					  <h5 class="panel-title">
+				        Account
+				      </h5>
+				  </div>
+			  	</div>
+			</div>
+			
+		</div>
+
+<div class="col-lg-7" app-view-segment="1">
 
 <h2>User Account</h2>
 
@@ -15,5 +31,7 @@
   <dt>From countries:</dt><dd>Switzerland, France</dd>
 </dl>
 
+</div>
+</div>
 </div>
 
