--- a/src/main/webapp/partials/default.html
+++ b/src/main/webapp/partials/default.html
@@ -1,19 +1,19 @@
-<div class="container">
-  <div class="row">
-  	<div class="col-md-3">
+
+  <div class="row contents">
+  	<div class="col-lg-2">
 			
 			<div class="panel-group" id="accordion" ng-controller="StackMenuCtrl">
 			  <div class="panel panel-default" ng-repeat="group in groups">
 				  <div class="panel-heading">
 					  <h5 class="panel-title">
-				        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#{{group.id}}">
+				        <span class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#{{group.id}}">
 				          {{group.title}}
-				        </a>
+				        </span>
 				      </h5>
 				  </div>
-				  <div id={{group.id}} class="panel-collapse collapse" ng-controller="SidebarCtrl">
-					  <div ng-class="{selected:isSelected('{{item.url}}')}" ng-repeat="item in group.items">
-							<a class="list-group-item" href="{{item.route}}">{{item.name}}</a>
+				  <div id="{{group.id}}" class="panel-collapse collapse" ng-controller="SidebarCtrl">
+					  <div class="list-item" ng-class="{selected:isSelected('{{item.url}}')}" ng-repeat="item in group.items">
+							<h6><a class="list-group-item" href="{{item.route}}">{{item.name}}</a></h6>
 					  </div>
 				  </div>
 			  	</div>
@@ -21,8 +21,8 @@
 			
 		</div>
 
-	  <div class="col-md-7">
-	  	<div app-view-segment="1">
+	  <div class="col-lg-10 contents" app-view-segment="1">
+	  	<div class="col-lg-7">
  		 <p>
 	    This is Version 0.1 of the GeoKnow Generator, which comprises a number of tools for managing the life-cycle of Geographic Linked Data. The life-cycle comprises in particular the stages:
 			</p>
@@ -42,10 +42,10 @@
 			</p>
 
 	  	</div>
-	   
+	    </div>
 		</div>
   </div>
-</div>
+
 
 
  	  
