--- a/src/main/webapp/partials/settings.html
+++ b/src/main/webapp/partials/settings.html
@@ -1,11 +1,11 @@
 <div class="container">
   <div class="row">
-  	<div class="col-md-3">
+  	<div class="col-lg-3">
 			
 			<div class="panel-group" id="accordion" ng-controller="SettingsMenuCtrl">
 			  <div class="panel panel-default" ng-repeat="item in items">
 				  <div class="panel-heading" ng-controller="SidebarCtrl">
-					  <h5 ng-class="{selected:isSelected('{{item.route}}')}" class="panel-title">
+					  <h5 ng-class="{selected:isSelected('{{item.url}}')}" class="panel-title">
 				        <a href="{{item.route}}">{{item.name}}</a>
 				      </h5>
 				  </div>
@@ -14,7 +14,7 @@
 			
 		</div>
 		
-	  <div class="col-md-9" app-view-segment="1">
+	  <div class="col-lg-7" app-view-segment="1">
 	  	
 	  <h2>General Settings</h2>
 	   
