--- a/src/main/webapp/partials/linking/limes.html
+++ b/src/main/webapp/partials/linking/limes.html
@@ -22,8 +22,6 @@
 
   <!-- Modal -->
   <div class="modal fade" id="modalWindow">
-    <div class="modal-dialog">
-      <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
           <h5 class="modal-title green bold">LIMES - SAIM</h5>
@@ -32,9 +30,7 @@
         <iframe id="mod-frame" src="http://139.18.2.136:8080/SAIM"></iframe>
         </div>
         <div class="modal-footer">
-          <button class="btn-sm btn-success" class="close" data-dismiss="modal">Close</button>
+          <button type="button" class="btn-sm btn-success" data-dismiss="modal">Close</button>
         </div>
-      </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
   </div>
