--- a/src/main/webapp/partials/querying-and-exploration/facete.html
+++ b/src/main/webapp/partials/querying-and-exploration/facete.html
@@ -13,7 +13,7 @@
         <iframe id="mod-frame" src="http://10.0.0.90/facete"></iframe>
         </div>
         <div class="modal-footer">
-          <button class="btn-sm btn-success" class="close" data-dismiss="modal">Close</button>
+          <button type="button" class="btn-sm btn-success" data-dismiss="modal">Close</button>
         </div>
         
   	</div><!-- /.modal -->
