--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -50,7 +50,7 @@ a.navbar-brand:hover{
 	background-image: linear-gradient(#f9f9f9, #CCCCCC);
 	background-repeat: repeat-x;
 	text-shadow:none;
-	color:#EF7D00;
+	color:#84BB41;
 }
 
 .navbar .nav > li > a {
@@ -92,7 +92,7 @@ a.navbar-brand:hover{
 
 .list-item.selected a{
 	color: #BC1B8B;
-	border:1px solid #84BB41;
+	border:1px solid #EF7D00;
 }
 
 .list-item.selected h6{
@@ -105,10 +105,20 @@ a.list-group-item:hover{
 	border:1px solid #84BB41;
 	color: #BC1B8B;
 }
+
+a.accordion-toggle:hover{
+	cursor:pointer;
+	color:#BC1B8B;
+	text-decoration:none;
+}
 	
 .accordion-toggle:hover{
 	cursor:pointer;
 	color:#BC1B8B;
+}
+
+.panel-heading:hover{
+	background-color:white;
 }
 	
 /* Typography */
@@ -151,40 +161,3 @@ a.list-group-item:hover{
 	  height: 100%;
 	  width: 97%;
 }
-
-
-/* Modal Window */
-/*
-.modal.in .modal-dialog {
-    height: 100%;
-    width: 100%;
-}
-
-.modal-content {
-    height: 100%;
-    width: 100%;
-    overflow-y: auto;
-}
-
-.modal.fade.in {
-	width:100%;
-	height:100%;
-	margin:0;
-	top:0;
-	left:0;
-}
-
-.modal-body {
-	position: relative;
-    max-height: 82%;
-    min-height: 82%;
-    overflow-y: auto;
-    padding: 15px;
-}
-
-.modal-footer {
-	padding: 15px 10px 15px 10px;
-	margin-top: 5px;
-	text-align: right;
-	border-top: 1px solid #e5e5e5;
-} */
