--- a/src/main/webapp/partials/account.html
+++ b/src/main/webapp/partials/account.html
@@ -1,7 +1,6 @@
 
-<div class="container" app-view-segment="1">
-<div class="row">
-  	<div class="col-lg-3">
+<div class="row contents">
+  	<div class="col-lg-2">
 			
 			<div class="panel-group">
 			  <div class="panel panel-default">
@@ -15,7 +14,7 @@
 			
 		</div>
 
-<div class="col-lg-7" app-view-segment="1">
+<div class="col-lg-10" app-view-segment="1">
 
 <h2>User Account</h2>
 
@@ -31,7 +30,6 @@
   <dt>From countries:</dt><dd>Switzerland, France</dd>
 </dl>
 
-</div>
 </div>
 </div>
 
