--- a/src/main/webapp/partials/settings.html
+++ b/src/main/webapp/partials/settings.html
@@ -1,12 +1,12 @@
-<div class="container">
-  <div class="row">
-  	<div class="col-lg-3">
+<div class="row contents">
+
+  	<div class="col-lg-2">
 			
 			<div class="panel-group" id="accordion" ng-controller="SettingsMenuCtrl">
 			  <div class="panel panel-default" ng-repeat="item in items">
 				  <div class="panel-heading" ng-controller="SidebarCtrl">
 					  <h5 ng-class="{selected:isSelected('{{item.url}}')}" class="panel-title">
-				        <a href="{{item.route}}">{{item.name}}</a>
+				        <a class="accordion-toggle" href="{{item.route}}">{{item.name}}</a>
 				      </h5>
 				  </div>
 			  	</div>
@@ -14,7 +14,7 @@
 			
 		</div>
 		
-	  <div class="col-lg-7" app-view-segment="1">
+	  <div class="col-lg-10 contents" app-view-segment="1">
 	  	
 	  <h2>General Settings</h2>
 	   
@@ -35,5 +35,5 @@
 
 	 
 		</div>
-  </div>
+
 </div>
