Fixed dataset modal

--- a/src/main/webapp/partials/account.html
+++ b/src/main/webapp/partials/account.html
@@ -6,7 +6,7 @@
 			  <div class="panel panel-default">
 				  <div class="panel-heading">
 					  <h5 class="panel-title">
-				        Account
+				        <a class="accordion-toggle" href="#/account">Account</a>
 				      </h5>
 				  </div>
 			  	</div>
