--- a/src/main/webapp/partials/authoring/ontowiki.html
+++ b/src/main/webapp/partials/authoring/ontowiki.html
@@ -17,7 +17,7 @@
 
 <div ng-controller="ModalWindow">
 	<h3 class="green bold">OntoWiki</h3>
-    <a class="btn btn-primary btn-large" ng-click="open()">Launch OntoWiki</a>
+    <a class="btn btn-primary btn-large" ng-click="OpenFullWindow()">Launch OntoWiki</a>
 
   <!-- Modal -->
   <div class="modal fade" id="modalWindow">
