--- a/src/main/webapp/partials/linking/limes.html
+++ b/src/main/webapp/partials/linking/limes.html
@@ -18,7 +18,7 @@
 
 <div ng-controller="ModalWindow">
 	<h3 class="green bold">LIMES - SAIM</h3>
-    <a class="btn btn-primary btn-large" ng-click="open()">Launch LIMES</a>
+    <a class="btn btn-primary btn-large" ng-click="OpenFullWindow()">Launch LIMES</a>
 
   <!-- Modal -->
   <div class="modal fade" id="modalWindow">
