--- a/src/main/webapp/partials/querying-and-exploration/facete.html
+++ b/src/main/webapp/partials/querying-and-exploration/facete.html
@@ -1,6 +1,6 @@
 <div ng-controller="ModalWindow">
 	<h3 class="green bold">Facete</h3>
-    <a class="btn btn-primary btn-large" ng-click="open()">Launch Facete</a>
+    <a class="btn btn-primary btn-large" ng-click="OpenFullWindow()">Launch Facete</a>
 
   <!-- Modal -->
   <div class="modal fade" id="modalWindow">
