--- a/src/main/webapp/partials/modals/datasets.html
+++ b/src/main/webapp/partials/modals/datasets.html
@@ -1,10 +1,7 @@
 
-<div class="modal-header">
-  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-  <h3>Edit Dataset</h3>
-</div>
+<h3>Edit Dataset</h3>
 
-<div class="modal-body">
+<div>
   <form class="form-horizontal" role="form">
   <div class="form-group">
     <label for="name" class="col-lg-2 control-label">Name</label>
@@ -19,10 +16,5 @@
     </div>
   </div>
 </form>
-</div>
-
-<div class="modal-footer">
-  <button type="button" class="btn" ng-click="hide()">Close</button>
-  <button class="btn btn-primary" ng-click="modal.saved=true;hide()">Save changes</button>
 </div>
 
