--- a/src/main/webapp/partials/modals/data-sources.html
+++ b/src/main/webapp/partials/modals/data-sources.html
@@ -1,14 +1,10 @@
 
 
-<div class="modal-header">
-  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-  <h3>Edit Dataset</h3>
-</div>
 
-<div class="modal-body" ng-controller="DataSourceTabCtrl	">   
+<div ng-controller="DataSourceTabCtrl">   
+	
   <div ng-model="tabs.index" bs-tabs>
     <div ng-repeat="tab in tabs" data-title="{{tab}}">
- 
     </div>        
   </div>
 
@@ -71,9 +67,4 @@
 		  </div>
 		</form>
   </div>
-</div>
-
-<div class="modal-footer">
-  <button type="button" class="btn" ng-click="hide()">Close</button>
-  <button class="btn btn-primary" ng-click="modal.saved=true;hide()">Save changes</button>
 </div>
