--- a/src/main/webapp/partials/settings/datasets.html
+++ b/src/main/webapp/partials/settings/datasets.html
@@ -2,18 +2,19 @@
 <h2>Dataset Management</h2>
 
 <div ng-controller="ModalWindow">
-<button type="button" class="btn btn-large btn-primary" ng-click="AddNewDataset()">Add new dataset</button>
+<button type="button" class="btn btn-large btn-primary" ng-click="OpenFormWindow('partials/modals/datasets.html')">Add new dataset</button>
 
 <div class="modal fade" id="modalWindow">
     
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h5 class="modal-title green bold">Edit dataset</h5>
+          <h5 class="modal-title green bold">Edit datasets</h5>
         </div>
         <div class="modal-body">
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn-sm btn-success" data-dismiss="modal">Close</button>
+          <button type="button" class="btn-sm btn-success" data-dismiss="modal">Save</button>
+          <button type="button" class="btn-sm btn-success" data-dismiss="modal">Cancel</button>
         </div>
         
   	</div><!-- /.modal -->
