--- a/src/main/webapp/partials/settings/datasets.html
+++ b/src/main/webapp/partials/settings/datasets.html
@@ -50,8 +50,8 @@
     <td>2008-11-17</td>
     <td>
     	<ul>
-    		<i class="icon-trash icon-large"></i>
-    		<i class="icon-edit icon-large"></i>
+    		<i class="glyphicon glyphicon-trash"></i>
+        <i class="glyphicon glyphicon-edit"></i>
     	</ul>
     </td>
   </tr>
