add functionality to manage graphs

--- a/src/main/webapp/partials/settings/data-sources.html
+++ b/src/main/webapp/partials/settings/data-sources.html
@@ -6,7 +6,7 @@
 
 <div ng-controller="ModalWindow">
   <button type="button" class="btn btn-large btn-primary" 
-    ng-click="OpenFormWindow('partials/modals/endpoint.html')">Add new Endpoint</button>
+    ng-click="OpenTemplateWindow('partials/modals/endpoint.html')">Add new Endpoint</button>
 
   <div class="modal fade" id="modalWindow">
     <div class="modal-header">
@@ -50,7 +50,7 @@
 <div ng-controller="ModalWindow">
 
   <button type="button" class="btn btn-large btn-primary" 
-    ng-click="OpenFormWindow('partials/modals/database.html')">Add new Database</button>
+    ng-click="OpenTemplateWindow('partials/modals/database.html')">Add new Database</button>
 
   <div class="modal fade" id="modalWindow">
     <div class="modal-header">
