--- a/src/main/webapp/partials/extraction-and-loading/import-rdf.html
+++ b/src/main/webapp/partials/extraction-and-loading/import-rdf.html
@@ -1,61 +1,110 @@
 <h3 class="green bold">Import RDF Data</h3>
 
 <div ng-controller="ImportFormCtrl">
-	<form class="form-horizontal" role="form">
-		<div class="form-group">
-			<label for="source-type" class="col-lg-2 control-label">Import from a </label>
-			<div class="col-lg-10">
-	      <select id="source-type" class="form-control" ng-model="sourceType" 
-	      				ng-options="c.label for c in sourceTypes" ng-change="updateForm()">
-        </select>
-  		</div>
-		</div>
-	
-		<div class="form-group">
-			<label for="graph" class="col-lg-2 control-label">To a dataset </label>
-			<div class="col-lg-10">
-	      <select id="graph" class="form-control" ng-model="graph"></select>
-	    </div>
-  	</div>
 
-		<div ng-show="fileElements" class="animate-show">
+	<form class="form-horizontal" role="form">
+	<div class="form-group">
+		<label for="source-type" class="col-lg-2 control-label">Import from a </label>
+		<div class="col-lg-10">
+      <select id="source-type" class="form-control" ng-model="sourceType" 
+      				ng-options="c.label for c in sourceTypes" ng-change="updateForm()" required>
+      </select>
+		</div>
+	</div>
+	</form>
+
+	<!-- Import from file form -->
+	<div ng-show="fileElements" class="animate-show">
+		<form class="form-horizontal" role="form" name="fileForm" novalidate>
+			<div class="form-group">
+				<label for="graph" class="col-lg-2 control-label">To a dataset </label>
+				<div class="col-lg-10">
+		      <select id="graph" name= "graph" class="form-control" ng-model="importFile.graph"
+		      				ng-options="c.name as c.graph.label for c in namedGraphs" required>
+		      </select>
+		    </div>
+	  	</div>
 			<div class="form-group">
 	    	<label for="inputFile" class="col-lg-2 control-label">File input</label>
 	    	<div class="col-lg-10">
-			    <input type="file" id="inputFile" class="form-control">
+			    <!-- <input type="text" ng-model="myModelObj"> -->
+				  <!-- <input type="file" class="form-control" ng-file-select="onFileSelect($files)" > -->
+				  <input type="file" class="form-control" ng-file-select="onFileSelect($files)" multiple>
 	  		</div>
 	  	</div>
-	  </div>
+	  	<div class="form-group">
+    		<div class="col-lg-offset-2 col-lg-10">
+      		<button class="btn btn-default" ng-click="import()" ng-disabled="isValid()">Import</button>
+    		</div>
+  	</div>
+	  </form>
+  </div>
 
-		<div ng-show="urlElements" class="animate-show">
+	<!-- Import from URL form  -->
+	<div ng-show="urlElements" class="animate-show">
+		<form class="form-horizontal" role="form" name="urlForm" novalidate>
+			<div class="form-group">
+				<label for="graph" class="col-lg-2 control-label">To a dataset </label>
+				<div class="col-lg-10">
+		      <select id="graph" class="form-control" ng-model="importUrl.graph"
+		      				ng-options="c.name as c.graph.label for c in namedGraphs" required>
+		      </select>
+		    </div>
+	  	</div>
 			<div class="form-group">
 	    	<label for="inputUrl" class="col-lg-2 control-label">Url input</label>
 		    <div class="col-lg-10">
-			    <input type="text" id="inputUrl" class="form-control">
+			    <input type="text" id="inputUrl" name="inputUrl" class="form-control" ng-model="importUrl.inputUrl" url required>
+			    <div class="error" ng-show="urlForm.inputUrl.$dirty && urlForm.inputUrl.$invalid">Invalid:
+          	<span ng-show="urlForm.inputUrl.$error.required">Specify the URL</span>
+          	<span ng-show="urlForm.inputUrl.$error.url">This is not a valid URL.</span>
+        	</div>
 	  		</div>
 	  	</div>
-	  </div>
+	  	<div class="form-group">
+    		<div class="col-lg-offset-2 col-lg-10">
+      		<button class="btn btn-default" ng-click="import()" ng-disabled="urlForm.$invalid || isUnchanged(importUrl)">Import</button>
+    		</div>
+  		</div>
+		</form>
+	</div>
 
-		<div ng-show="queryElements" class="animate-show">
+	<!-- Import from URL sparql  -->
+	<div ng-show="queryElements" class="animate-show">
+		<form class="form-horizontal" role="form" name="sparqlForm" novalidate>
 			<div class="form-group">
-	    	<label for="inputEndPoint" class="col-lg-2 control-label">SPARQL EndPoint</label>
+				<label for="graph" class="col-lg-2 control-label">To a dataset </label>
+				<div class="col-lg-10">
+		      <select id="graph" class="form-control" ng-model="importSparql.graph"
+		      				ng-options="c.name as c.graph.label for c in namedGraphs" required>
+		      </select>
+		    </div>
+	  	</div>
+			<div class="form-group">
+	    	<label for="endPoint" class="col-lg-2 control-label">SPARQL EndPoint</label>
 		    <div class="col-lg-10">
-			    <input type="text" id="inputEndPoint" class="form-control">
+			    <input type="text" id="endPoint" class="form-control" name="endPoint" ng-model="importSparql.endPoint" url required>
+			    <div class="error"  ng-show="sparqlForm.endPoint.$dirty && sparqlForm.endPoint.$invalid">Invalid:
+          	<span ng-show="sparqlForm.endPoint.$error.required">Specify the EndPoint</span>
+          	<span ng-show="sparqlForm.endPoint.$error.url">This is not a valid endPoint</span>
+        	</div>
 	  		</div>
 	  	</div>
 			<div class="form-group">
-	    	<label for="inputFile" class="col-lg-2 control-label">Query</label>
+	    	<label for="sparqlQuery" class="col-lg-2 control-label">Query</label>
 		    <div class="col-lg-10">
-		    	<textarea class="form-control" rows="3"></textarea>
+		    	<textarea class="form-control" rows="3" id="sparqlQuery" name="sparqlQuery" ng-model="importSparql.sparqlQuery" required></textarea>
+		    	<div class="error" ng-show="sparqlForm.sparqlQuery.$dirty && sparqlForm.sparqlQuery.$invalid">Invalid:
+          	<span ng-show="sparqlForm.sparqlQuery.$error.required">Specify the EndPoint</span>
+        	</div>
 	  		</div>
 	  	</div>
-	  </div>
+	  	<div class="form-group">
+    		<div class="col-lg-offset-2 col-lg-10">
+      		<button class="btn btn-default" ng-click="import()" ng-disabled="sparqlForm.$invalid || isUnchanged(importSparql)">Import</button>
+    		</div>
+  		</div>	
+	  </form>
+	</div>
 
-		<div class="form-group">
-    	<div class="col-lg-offset-2 col-lg-10">
-      	<button type="submit" class="btn btn-default">Import</button>
-    	</div>
-  	</div>
-
-	</form>
 </div>
