--- a/src/main/webapp/partials/settings/datasets.html
+++ b/src/main/webapp/partials/settings/datasets.html
@@ -7,7 +7,7 @@
   <button type="button" class="btn btn-large btn-primary" ng-click="OpenWindow(); new()">Add new dataset</button>
 
   <div class="modal fade" id="modalWindow">
-    <form name="graphForm" class="form-horizontal" role="form" >
+    <form name="graphForm" class="form-horizontal" role="form" novalidate>
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
         <h5 class="modal-title green bold">Edit Named Graph</h5>
@@ -17,19 +17,19 @@
         <div class="form-group">
           <label for="name" class="col-lg-2 control-label">Name</label>
           <div class="col-lg-10">
-            <input type="text" class="form-control" id="label" placeholder="Name" ng-model="namedgraph.name" required />
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="label" class="col-lg-2 control-label">Label</label>
-          <div class="col-lg-10">
-            <input type="text" class="form-control" id="label" placeholder="Label" ng-model="namedgraph.graph.label" required />
+            <input type="text" class="form-control" id="label" name="label" placeholder="Name" ng-model="namedgraph.name" required />
+            <div class="error"  ng-show="graphForm.label.$dirty && graphForm.label.$invalid">Invalid:
+              <span ng-show="graphForm.label.$error.required">Specify a name</span>
+            </div>
           </div>
         </div>
         <div class="form-group">
           <label for="description" class="col-lg-2 control-label">Description</label>
           <div class="col-lg-10">
-            <input type="text" class="form-control" id="description" placeholder="Description" ng-model="namedgraph.graph.description">
+            <input type="text" class="form-control" name="description" id="description" placeholder="Description" ng-model="namedgraph.graph.description" />
+            <div class="error"  ng-show="graphForm.description.$dirty && graphForm.description.$invalid">Invalid:
+              <span ng-show="graphForm.description.$error.required">Give a description</span>
+            </div>
           </div>
         </div>
         <div class="form-group">
@@ -52,8 +52,9 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn-sm btn-success" data-dismiss="modal" ng-click="save()">Save</button>
-        <button type="button" class="btn-sm btn-success" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn-sm btn-success" data-dismiss="modal" ng-click="save()"
+        ng-disabled="graphForm.$invalid || isUnchanged(namedgraph)">Save</button>
+        <button type="button" class="btn-sm btn-default " data-dismiss="modal">Cancel</button>
       </div>      
     </form>
  	</div>
